<resources>
    <string name="app_name">Foodie</string>
    <string name="home">Home</string>
    <string name="favourites">Favourite Restaurants</string>
    <string name="profile">My Profile</string>
    <string name="faq">FAQ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="name">Name</string>
    <string name="e_mail">E-Mail</string>
    <string name="number">+91–9876215462</string>
    <string name="address">Address</string>
    <string name="sortPrice">Price For One</string>
    <string name="price">₹299/Person</string>
    <string name="order_history">Order History</string>
    <string name="logout">Logout</string>
    <string name="your_previous_orders_are_lister_below">Your previous orders are lister below:</string>
    <string name="time">time</string>
    <string name="mobile">Mobile Number (10 Digits)</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="login">Login</string>
    <string name="new_user_register_here"><u>New User? Register here.</u></string>
    <string name="name_register">Name (Min. 3 Characters)</string>
    <string name="email">Email</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password_registration">Password (Min. 4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="send_otp">Send OTP</string>
    <string name="text">Enter registered email and mobile number \nbelow:</string>
    <string name="otp">OTP (4 Characters)</string>
    <string name="new_password">New Password (Min. 4 Characters)</string>
    <string name="retype_password">Retype Password</string>
    <string name="submit">Submit</string>
    <string name="login_preference">Login Preference</string>
    <string name="sort_by_rating">Sort by Rating</string>
    <string name="sort_by_name">Sort by Name ↑</string>
    <string name="sort_by_name_des">Sort by Name ↓</string>
    <string name="choose_from_list_below">Choose from menu listed below :</string>
    <string name="proceed_to_cart">Proceed To Cart</string>
    <string name="rs_200">Rs 200</string>
    <string name="food_name">Food Name</string>
    <string name="_1">1</string>
    <string name="add">Add</string>
    <string name="order_placed_successfully">ORDER PLACED SUCCESSFULLY</string>
    <string name="sort_by_price">Sort by Price ₹</string>
    <string name="ordering_from_name">Ordering from : Name</string>
    <string name="place_order_total_rs_420">Place Order(Total Rs 420)</string>
    <string name="resDetails">Restaurant Details</string>
    <string name="no_order_placed_yet">No Order Placed Yet</string>
</resources>
