<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Registration"
    android:background="@color/colorAccent">

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/app_icon_round"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="15dp"
        android:layout_below="@+id/img"
        android:background="@color/white"
        android:inputType="text"
        android:hint="@string/name_register"
        android:maxLength="20"
        android:maxLines="1"
        android:drawableStart="@drawable/profile"/>
    <EditText
        android:id="@+id/etMail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="15dp"
        android:layout_below="@+id/etName"
        android:background="@color/white"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:maxLength="40"
        android:maxLines="1"
        android:drawableStart="@drawable/mail"/>
    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="15dp"
        android:layout_below="@+id/etMail"
        android:background="@color/white"
        android:inputType="phone"
        android:hint="@string/mobile"
        android:maxLength="10"
        android:maxLines="1"
        android:drawableStart="@drawable/mobile"/>
    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="15dp"
        android:layout_below="@+id/etPhoneNumber"
        android:background="@color/white"
        android:inputType="text"
        android:hint="@string/delivery_address"
        android:maxLength="30"
        android:maxLines="1"
        android:drawableStart="@drawable/address"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="15dp"
        android:layout_below="@+id/etAddress"
        android:background="@color/white"
        android:inputType="textPassword"
        android:hint="@string/password_registration"
        android:maxLength="20"
        android:maxLines="1"
        android:drawableStart="@drawable/password"/>
    <EditText
        android:id="@+id/etConfPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="15dp"
        android:layout_below="@+id/etPassword"
        android:background="@color/white"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:maxLength="20"
        android:maxLines="1"
        android:drawableStart="@drawable/password"/>
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:background="@color/colorAccentDark"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"/>


</RelativeLayout>