<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/profile"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="#000000"
        android:background="@color/white"
        android:layout_margin="5dp" />
    <TextView
        android:id="@+id/txtMail"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/e_mail"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="#000000"
        android:background="@color/white"
        android:layout_margin="5dp" />
    <TextView
        android:id="@+id/txtNumber"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/number"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="#000000"
        android:background="@color/white"
        android:layout_margin="5dp"/>
    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/address"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="#000000"
        android:background="@color/white"
        android:layout_margin="5dp"/>

</LinearLayout>