<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SetNewPass"
    android:background="@color/colorAccent">

    <EditText
        android:id="@+id/etOTP"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:hint="@string/otp"
        android:padding="3dp"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="15dp"
        android:inputType="phone"
        android:maxLength="4"
        android:maxLines="1"/>
    <EditText
        android:id="@+id/etNewPass"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:hint="@string/new_password"
        android:padding="3dp"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/etOTP"
        android:layout_marginHorizontal="15dp"
        android:inputType="textPassword"
        android:maxLength="30"
        android:maxLines="1"/>
    <EditText
        android:id="@+id/etReNewPass"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:hint="@string/retype_password"
        android:padding="3dp"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/etNewPass"
        android:layout_marginHorizontal="15dp"
        android:inputType="textPassword"
        android:maxLength="30"
        android:maxLines="1"/>
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:background="@color/colorAccentDark"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"/>
</RelativeLayout>