<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Login"
    android:background="@color/colorAccent">

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/app_icon_round"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="40dp"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="15dp"
        android:layout_below="@+id/img"
        android:background="@color/white"
        android:inputType="phone"
        android:hint="@string/mobile"
        android:maxLines="1"
        android:maxLength="10"
        android:drawableStart="@drawable/mobile"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="15dp"
        android:layout_below="@+id/etPhoneNumber"
        android:background="@color/white"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:maxLength="20"
        android:maxLines="1"
        android:drawableStart="@drawable/password"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:background="#00a393"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_below="@id/etPassword"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/txtForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user_register_here"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:focusable="true" />



</RelativeLayout>