<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgotPassword"
    android:background="@color/colorAccent">

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/app_icon_round"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="40dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_below="@+id/img"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="15dp"
        android:layout_below="@+id/txt"
        android:background="@color/white"
        android:inputType="phone"
        android:hint="@string/mobile"
        android:maxLines="1"
        android:maxLength="10"
        android:drawableStart="@drawable/mobile"/>

    <EditText
        android:id="@+id/etMail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="15dp"
        android:layout_below="@+id/etPhoneNumber"
        android:background="@color/white"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:maxLength="40"
        android:maxLines="1"
        android:drawableStart="@drawable/mail"/>

    <Button
        android:id="@+id/btnSendOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:background="@color/colorAccentDark"
        android:text="@string/send_otp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"/>

</RelativeLayout>