<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:id="@+id/resNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/line"
        android:weightSum="7"
        android:layout_marginVertical="10dp">
        <TextView
            android:id="@id/txtResName"
            android:text="@string/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/txtCost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/rs_200"
            android:paddingHorizontal="10dp"/>
        <TextView
            android:id="@+id/txtTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/time"
            android:textAlignment="textEnd"
            android:paddingHorizontal="10dp"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@+id/resNameLayout"
        android:id="@+id/recyclerItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>